# VisageDvachevsky-NvMnd

./: .gitignore  BUGFIXES.md  CLAUDE.md  ISSUE_9_FIXES.md  build_warnings_errors.txt
docs/: IMPLEMENTATION_ROADMAP.md  PROJECT_STRUCTURE.md  VERSIONING_AND_COMPATIBILITY.md  architecture_overview.md  core_runtime_spec.md  editor_engine_interaction.md  gui-assessment.md  gui_architecture.md  nm_script_specification.md  pack_file_format.md  quick_start_guide.md  roadmap.md  troubleshooting_guide.md
editor/: CMakeLists.txt
editor/include/NovelMind/editor/: asset_pipeline.hpp  editor_runtime_host.hpp  inspector_binding.hpp  project_integrity.hpp  project_manager.hpp
editor/include/NovelMind/editor/qt/: nm_main_window.hpp  nm_play_mode_controller.hpp  nm_style_manager.hpp  nm_undo_manager.hpp
editor/include/NovelMind/editor/qt/panels/: nm_asset_browser_panel.hpp  nm_build_settings_panel.hpp  nm_debug_overlay_panel.hpp  nm_diagnostics_panel.hpp  nm_hierarchy_panel.hpp  nm_inspector_panel.hpp  nm_localization_panel.hpp  nm_play_toolbar_panel.hpp  nm_scene_view_panel.hpp  nm_story_graph_panel.hpp  nm_timeline_panel.hpp  nm_voice_manager_panel.hpp
editor/src/: asset_pipeline.cpp  asset_preview.cpp  curve_editor.cpp  editor_runtime_host.cpp  inspector_binding.cpp  project_manager.cpp  timeline_editor.cpp  voice_manager.cpp
editor/src/qt/: main.cpp  nm_icon_manager.cpp  nm_main_window.cpp  nm_play_mode_controller.cpp  nm_style_manager.cpp  nm_undo_manager.cpp  nm_welcome_dialog.cpp
editor/src/qt/panels/: nm_asset_browser_panel.cpp  nm_debug_overlay_panel.cpp  nm_diagnostics_panel.cpp  nm_hierarchy_panel.cpp  nm_inspector_panel.cpp  nm_localization_panel.cpp  nm_play_toolbar_panel.cpp  nm_scene_view_panel.cpp  nm_story_graph_panel.cpp  nm_voice_manager_panel.cpp
engine_core/: CMakeLists.txt
engine_core/include/NovelMind/audio/: audio_manager.hpp
engine_core/include/NovelMind/core/: application.hpp  logger.hpp
engine_core/include/NovelMind/input/: input_manager.hpp
engine_core/include/NovelMind/localization/: localization_manager.hpp
engine_core/include/NovelMind/renderer/: camera.hpp  font.hpp  renderer.hpp  text_layout.hpp
engine_core/include/NovelMind/save/: save_manager.hpp
engine_core/include/NovelMind/scene/: scene_graph.hpp  transition.hpp
engine_core/include/NovelMind/scripting/: ast.hpp  compiler.hpp  parser.hpp  script_runtime.hpp  vm.hpp
engine_core/include/NovelMind/vfs/: multi_pack_manager.hpp  pack_security.hpp
engine_core/src/audio/: audio_manager.cpp
engine_core/src/core/: application.cpp  logger.cpp  platform_sdl.cpp  profiler.cpp  property_system.cpp
engine_core/src/input/: input_manager.cpp
engine_core/src/localization/: localization_manager.cpp
engine_core/src/renderer/: camera.cpp  font.cpp  renderer.cpp  text_layout.cpp  texture.cpp
engine_core/src/save/: save_manager.cpp
engine_core/src/scene/: scene_graph.cpp  transition.cpp
engine_core/src/scripting/: compiler.cpp  interpreter.cpp  ir.cpp  parser.cpp  script_runtime.cpp  vm.cpp
engine_core/src/ui/: ui_framework.cpp
engine_core/src/vfs/: memory_fs.cpp  multi_pack_manager.cpp  pack_reader.cpp  pack_security.cpp  resource_cache.cpp
tests/: CMakeLists.txt
tests/integration/: test_editor_runtime.cpp
